--- a/tickezy_backend/package.json
+++ b/tickezy_backend/package.json
@@ -26,6 +26,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.4",
     "swagger-jsdoc": "^3.7.0",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0"
