--- a/tickezy_backend/package.json
+++ b/tickezy_backend/package.json
@@ -21,6 +21,7 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
